# spark-mcp

./: .claudeignore  .gitignore  README.md  llms.txt  pyproject.toml
docs/: index.html
spark_mcp/: db.py  gmail.py  server.py
